tests/fixtures/invalid/divmod_str_none.py
# Cannot call divmod() with Str, None
x = divmod("hello", None)
